<resources>
    <string name="app_name" translatable="false">GreenBits</string>
    <string name="empty" translatable="false" />
    <string name="action_settings">Settings</string>
    <string name="title_activity_mnemonic">Restore</string>
    <string name="sendToText">To</string>
    <string name="sendAmountText">Amount</string>
    <string name="sendSendButton">Review &amp; Send</string>
    <string name="pinSaveText">Save</string>
    <string name="pinLoginText">Enter</string>
    <string name="title_activity_qr_scanner">QR Scanner</string>
    <string name="title_activity_sign_up">Create</string>
    <string name="signupContinueButtonText">CONTINUE</string>
    <string name="signupCheckBoxText">I secured the passphrase and I have read the ToS</string>
    <string name="termsofservice"><a href="https://greenaddress.it/en/tos/">Terms of Service</a></string>
    <string name="firstSignUpText">CREATE</string>
    <string name="firstLogInText">RESTORE</string>
    <string name="receive_title">RECEIVE</string>
    <string name="main_title">ACTIVITY</string>
    <string name="send_title">SEND</string>
    <string name="pinTitleText">PIN</string>
    <string name="network_unavailable">Disconnected</string>
    <string name="newTxTitle">New transaction</string>
    <string name="new_incoming_transaction">A new transaction has just arrived in your wallet.</string>
    <string name="sweepAddressTitle">Sweep funds</string>
    <string name="twoFactorChoicesTitle">Choose 2 Factor Authentication method</string>
    <string name="choose">CHOOSE</string>
    <string name="cancel">CANCEL</string>
    <string name="attemptsLeft">%1$d attempts left</string>
    <plurals
        name="attempts_remaining">
        <item quantity="zero">No attempts remaining</item>
        <item quantity="one">One attempt remaining</item>
        <item quantity="other">%d attempts remaining</item>
    </plurals>
    <string-array name="twoFactorChoices">
        <item>Email</item>
        <item>SMS</item>
        <item>Call</item>
        <item>Google Auth</item>
    </string-array>
    <string-array name="twoFactorMethods" translatable="false">
        <item>email</item>
        <item>sms</item>
        <item>phone</item>
        <item>gauth</item>
    </string-array>
    <string-array name="timesStrings">
        <item>year</item>
        <item>month</item>
        <item>day</item>
        <item>hour</item>
        <item>minute</item>
        <item>second</item>
    </string-array>
    <string-array name="timesStringPlurals">
        <item>years</item>
        <item>months</item>
        <item>days</item>
        <item>hours</item>
        <item>minutes</item>
        <item>seconds</item>
    </string-array>
    <string-array name="fee_target_entries">
        <item>High</item>
        <item>Normal</item>
        <item>Low</item>
        <item>Economy</item>
    </string-array>
    <string-array name="fee_target_values"  translatable="false">
        <item>3</item>
        <item>6</item>
        <item>12</item>
        <item>24</item>
    </string-array>
    <string-array name="fee_target_summaries">
        <item>Confirmation in 3 blocks, up to 30 minutes on average</item>
        <item>Confirmation in 6 blocks, up to one hour on average</item>
        <item>Confirmation in 12 blocks, up to two hours on average</item>
        <item>Confirmation in 24 blocks or later, 4 hours or longer on average</item>
    </string-array>
    <string-array name="send_fee_target_choices">
        <item>High</item>
        <item>Normal</item>
        <item>Low</item>
        <item>Economy</item>
        <item>Custom</item>
    </string-array>
    <string-array name="send_fee_target_choices_instant">
        <item>High</item>
        <item>Normal</item>
        <item>Low</item>
        <item>Economy</item>
        <item>Custom</item>
        <item>Instant</item>
    </string-array>
    <string-array name="available_networks">
        <item>Bitcoin</item>
        <item>Testnet3</item>
        <item>Liquid</item>
    </string-array>
    <string name="custom_requires_rbf">Custom fees require transaction replacement functionality to be enabled.</string>
    <string name="default_custom_feerate">Default custom feerate</string>
    <string name="enter_satoshi_per_kb">Enter Satoshi per kB</string>
    <string name="feerate_changed">The feerate was corrected to the minimum rate of %1$d sat/kB</string>
    <string name="sat_per_kb">sat/kB</string>
    <string name="send">SEND</string>
    <string name="sweep">SWEEP</string>
    <string name="sweep_bip38_passphrase_prompt">Please provide the BIP38 password:</string>
    <string name="invalid_passphrase">Invalid password</string>
    <string name="invalid_key">Invalid key</string>
    <string name="invalid_feerate">Rate must be empty or greater than %1$d.</string>
    <string name="warning">Warning!</string>
    <string name="save_password_now">You MUST save this passphrase NOW</string>
    <string name="greenaddress_headline">the easier, safer and faster bitcoin wallet</string>
    <string name="priority_label">Priority:</string>
    <string name="pinSkipText">SKIP</string>
    <string name="sendOptionalMemo">Optional memo</string>
    <string name="madeBy">by GreenAddress</string>
    <string name="welcomeGreenBits">Welcome to GreenBits</string>
    <string name="attemptsFinished">Invalid PIN, you don\'t have any attempts left. Please login using your passphrase.</string>
    <string name="attemptsLeftLong">Invalid PIN, you have %1$d attempts left</string>
    <string name="warnOnPaste">Be aware, other apps can read or change the clipboard</string>
    <string name="toastOnCopyAddress">Address copied to clipboard.</string>
    <string name="receiveAddressSubTitle">Address</string>
    <string name="sendPayTo">Pay to</string>
    <string name="action_sweep">Sweep</string>
    <string name="action_logout">Log out</string>
    <string name="txTypeIn">Received</string>
    <string name="txTypeOut">Sent</string>
    <string name="txTypeRedeposit">Redeposited</string>
    <string name="mnemonicHint">Type your GreenAddress passphrase or scan its qrcode</string>
    <string name="title_activity_settings">Settings</string>
    <string name="ago">%1$d %2$s ago</string>
    <string name="txSubTitle">Transaction details</string>
    <string name="txHashText">Hash</string>
    <string name="txRecipientText">Recipient</string>
    <string name="txMemoText">Memo</string>
    <string name="action_network">Network Monitor</string>
    <string name="action_about">About</string>
    <string name="currency">Currency</string>
    <string name="txDateText">Date</string>
    <string name="txAmountText">Amount</string>
    <string name="newTxAmount">Amount: </string>
    <string name="newTxRecipient">Recipient:</string>
    <string name="newTxFee">Fee:</string>
    <string name="invalidAmountAndAddress">Invalid amount and address</string>
    <string name="invalidAddress">Invalid address</string>
    <string name="invalidAmount">Invalid amount</string>
    <string name="invalidAmountTooSmall">The entered amount is too small to send</string>
    <string name="invalidPhoneNumber">Invalid phone number format</string>
    <string name="noBalanceFirstLine">Getting <a href="https://bitcoin.org/en/getting-started">started</a> with Bitcoin</string>
    <string name="noBalanceSecondLine">Where to <a href="https://howtobuybitcoins.info">buy</a> them</string>
    <string name="noBalanceThirdLine">Read our <a href="https://greenaddress.it/faq">FAQ</a></string>
    <string name="hw_wallet_headline">Please follow the instructions on your Hardware Wallet</string>
    <string name="hw_wallet_reconnect">Please re-connect your hardware wallet before trying again.</string>
    <string name="hw_wallet_registering">Cerating a new GreenAddress wallet, please wait…</string>
    <string name="trezorProvidePin">Please provide your Hardware Wallet PIN. Look at the device for number positions:</string>
    <string name="trezorProvidePassphrase">Please provide your Hardware Wallet passphrase.</string>
    <string name="main_account">Main</string>
    <string name="footerAccount">Account</string>
    <string name="btchip" translatable="false">BTChip</string>
    <string name="please_tap_card">Please tap card</string>
    <string name="btchipProvidePIN">Please provide your BTChip PIN:</string>
    <string name="ledger_firmware_outdated">Outdated Hardware Wallet firmware. Please upgrade to the latest firmware from your computer.</string>
    <string name="trezor_firmware_outdated">Outdated Hardware Wallet firmware. Please upgrade to at least 1.6 at https:/mytrezor.com/ from your computer.</string>
    <string name="ledger_open_bitcoin_app">Ledger Dashboard detected, please open the Bitcoin app to access.</string>
    <string name="btchipInvalidPIN">Invalid PIN. Remaining attempts: %1$d. Please re-connect your hardware wallet before trying again.</string>
    <string name="btchipNotSetup">BTChip is not set up. Please set it up using a desktop client to be able to use it.</string>
    <string name="mnemonic_passphrase">Mnemonic passphrase</string>
    <string name="mnemonic_passphrase_not_available">Passphrase not available</string>
    <string name="autologout_time">Auto logout timeout</string>
    <string name="autologout_time_default">%1$d minutes</string>
    <string name="touch_to_display">Touch to display</string>
    <string name="txUnconfirmedTx">Transaction not confirmed. Please wait for block confirmations to gain trust in this transaction.</string>
    <string name="txUnverifiedTx">Transaction not verified. Please wait for synchronization to gain trust in this transaction. Remaining blocks:</string>
    <string name="unconfirmedBalanceTitle">Unconfirmed balance</string>
    <string name="unconfirmedBalanceText">Your balance is not confirmed. Either you have some unconfirmed incoming transactions, or SPV verification has not finished.</string>
    <string name="spvNoWiFiTitle">SPV synchronization</string>
    <string name="spvSettingsWatchOnly">SPV is not used and its settings cannot be changed in watch only mode.</string>
    <string name="spv_channel_name">SPV notifications</string>
    <string name="spv_channel_description">Displays the progress of SPV synchronization</string>
    <string name="enableSPV">Enable SPV</string>
    <string name="enableSPVSummary">Simple Payment Verification allows trusting your transactions and balance thanks to synchronization with Bitcoin network. It adds bandwidth and processing requirements, so you may want to switch it off if on poor connections or low end phones.</string>
    <string name="syncSPVOnMobile">Synchronize SPV on mobile</string>
    <string name="syncSPVOnMobileSummary">SPV is always synchronized on non mobile networks like WiFi or Ethernet. This setting also synchronizes when using mobile data. This can be expensive depending on your data plan so take care when enabling.</string>
    <string name="noTwoFactorWarning">You don\'t have two factor authentication!\nPlease go to settings to set it up!</string>
    <string name="singleTwoFactorWarning">You only have one two factor authentication method set up!\nPlease add another in settings as a backup in case you lose access.</string>
    <string name="scan_camera_problem_dialog_message">The camera has a problem. You probably need to restart the device.</string>
    <string name="scan_camera_problem_dialog_title">Camera problem</string>
    <string name="providePassphrase">Please provide your passphrase:</string>
    <string name="pref_title_display_hostname">Socks5 Hostname</string>
    <string name="pref_title_display_port">Socks5 Port</string>
    <string name="pref_default_host" translatable="false">127.0.0.1</string>
    <string name="pref_default_port" translatable="false">9050</string>
    <string name="enableTor">Enable Tor</string>
</resources>