<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:hint="@string/pref_default_host"
        android:inputType="textCapWords"
        android:key="proxy_host"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_hostname" />

    <EditTextPreference
        android:hint="@string/pref_default_port"
        android:inputType="number"
        android:key="proxy_port"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_port" />

    <CheckBoxPreference
        android:key="tor_enabled"
        android:dependency="proxy_host"
        android:title="@string/enableTor" />

    <MultiSelectListPreference
        android:key="network_selector"
        android:title="Network selector" />

    <EditTextPreference
        android:key="custom_networks_add"
        android:title="Add custom network URL"
        android:inputType="textUri" />

    <Preference
        android:key="custom_networks_add_qr"
        android:title="Add custom network QR code"
        />

    <ListPreference
        android:key="custom_networks_remove"
        android:title="Remove custom network"
        />

</PreferenceScreen>
